Unwanted actions can be selected by accident when dialog boxes unexpectedly pop-up
Issue description
In the middle of file copying and such, several kinds of dialogs requiring user intervention can pop-up unexpectedly in the middle of the main window. They offer options such as canceling the operation, replacing or renaming files, etc. Examples of two different types of said dialog boxes:
When these pop up out of nowhere in the middle of a lengthier operation while the user is using Files, the user can end up accidentally selecting an unwanted action. The risk exists because these buttons are located exactly over the main portion of the window that shows files and directories. Or this can be triggered with keyboard buttons such as Enter too. If the user is browsing files and happens to intend to click on something positioned exactly where a pop-up action button appears, they will pick an unwanted action. Or otherwise if they press Enter at the wrong time, this issue will occur as well.
Such misclicks could be potentially disastrous for the user's files and lead to a bad experience. It occurred to me just yesterday at random and I still don't know what action I picked.
Desired behavior
The pop-up buttons should remain unactionable for a short period of around 2 seconds to prevent accidental clicking and to give the user time to realize that something popped up. For example, Firefox does this in its file download dialog with a briefly greyed-out OK button as explained here on StackExchange and for several very good reasons. Nautilus should implement something similar.
Benefits of the solution
Prevent mistaken file management actions, improve UX.
Possible drawbacks
None. The delay may potentially pose a slight annoyance for some users, but the advantages of this UX design in preventing accidents with files far outweigh any negatives.