file-operations: Delay dialog activation

Warning, error and question dialogs may pop up unexpectedly during
lengthier operations and the user may end up selecting an unwanted
action.

This patch introduces a delay of 2s for dialog activation when
the total elapsed time of the job that created the dialog is
greater than 2s.

Fixes https://gitlab.gnome.org/GNOME/nautilus/-/issues/1988